--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,8 +5,12 @@ encoding//Debug/FRT_Library/FreeRTOS/Source/portable/MemMang/subdir_rules.mk=UTF
 encoding//Debug/FRT_Library/FreeRTOS/Source/portable/MemMang/subdir_vars.mk=UTF-8
 encoding//Debug/FRT_Library/FreeRTOS/Source/subdir_rules.mk=UTF-8
 encoding//Debug/FRT_Library/FreeRTOS/Source/subdir_vars.mk=UTF-8
+encoding//Debug/include/subdir_rules.mk=UTF-8
+encoding//Debug/include/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
 encoding//Debug/objects.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
+encoding//Debug/tasks/subdir_rules.mk=UTF-8
+encoding//Debug/tasks/subdir_vars.mk=UTF-8
